[gd_scene load_steps=10 format=2]

[ext_resource path="res://multiplayer/BaseDomainDisplay.gd" type="Script" id=1]
[ext_resource path="res://multiplayer/BaseDomainData.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/StatDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/gradient_bar.shader" type="Shader" id=4]
[ext_resource path="res://characters/01/icon_128.png" type="Texture" id=5]
[ext_resource path="res://multiplayer/IncantationProgress.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/starting_color = Vector3( 0.14, 0.99, 0.21 )
shader_param/ending_color = Vector3( 0.99, 0.11, 0.1 )
shader_param/progression = null
shader_param/reverse = null

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/LMROMAN10-REGULAR.OTF"

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = SubResource( 1 )

[node name="BaseDomainDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1320.0
margin_bottom = -880.0
rect_min_size = Vector2( 600, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseDomainData" parent="." instance=ExtResource( 2 )]

[node name="Panel" type="Panel" parent="."]
margin_right = 600.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_display" parent="Panel" instance=ExtResource( 3 )]
material = SubResource( 2 )
margin_left = 8.0
margin_top = 200.0
margin_right = 208.0
margin_bottom = 226.0
rect_rotation = -90.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = 48.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 160.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 40.0
margin_top = 160.0
margin_right = 184.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 3 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncantationProgress" parent="Panel" instance=ExtResource( 6 )]
margin_left = 48.0
margin_right = -352.0
margin_bottom = -170.0

[node name="stats_display" type="VBoxContainer" parent="Panel"]
margin_left = 200.0
margin_top = 32.0
margin_right = 360.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="threat_data_display" type="VBoxContainer" parent="Panel"]
margin_left = 384.0
margin_top = 8.0
margin_right = 584.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}
